# ember-data-api

./: .gitignore  Procfile  README.md  connect_to_db.py  create_table.py  ember.db  metadata.json  pyproject.toml  requirements.txt  settings.json  update_api.py
app/app/: admin.py  models.py  settings.py  urls.py  views.py
data/: api_country_overview_monthly.csv  api_country_overview_yearly.csv  api_day_ahead_price.csv  api_day_ahead_price_monthly.csv  api_generation_ind_monthly.csv  api_generation_ind_yearly.csv  api_generation_usa_yearly.csv  api_overview_ind_monthly.csv  api_overview_ind_yearly.csv  api_overview_usa_monthly.csv  api_overview_usa_yearly.csv  api_price_monthly.csv  api_subnational_generation_monthly.csv  api_subnational_generation_yearly.csv  api_subnational_overview_monthly.csv  api_subnational_overview_yearly.csv  capacity_annual_database.csv  capacity_yearly_api.csv  generation_tur_monthly.csv  generation_yearly_api.csv  intensity_annual_database.csv  overview_tur_monthly.csv
data/annual/: 2021_annual_database.csv
data/monthly/: 202108_monthly_database.csv
db_tables/schemas/: api_country_overview_monthly.txt  api_country_overview_yearly.txt  api_day_ahead_price.txt  api_day_ahead_price_monthly.txt  api_generation_monthly.txt  api_generation_usa_monthly.txt  api_generation_usa_yearly.txt  api_generation_yearly.txt  api_overview_usa_yearly.txt  api_price_monthly.txt  api_subnational_generation_monthly.txt  api_subnational_generation_yearly.txt  api_subnational_overview_monthly.txt
utils/: handle_db_connections.py
(+23 files in other folders)
